test_run_integration/adapters/test_library_adapter.py

"""
Generated FFI adapter for test_library.
Auto-generated by Polyglot FFI Contract Verifier.
"""

import ctypes
import os
from . import test_library_structs as structs
from . import test_library_exceptions as exceptions
from . import test_library_ownership as ownership

_LIBRARY_PATH = r"C:\H dir\My Projects\Polyglot Ffi Contract Verifier\test_run_integration\test_library.dll"
if not os.path.exists(_LIBRARY_PATH):
    raise FileNotFoundError(f"Native library not found: {_LIBRARY_PATH}")

_lib = ctypes.CDLL(_LIBRARY_PATH)

_lib.__va_start.argtypes = [ctypes.c_void_p]
_lib.__va_start.restype = None
_lib.__security_init_cookie.argtypes = []
_lib.__security_init_cookie.restype = None
_lib.__security_check_cookie.argtypes = [ctypes.c_void_p]
_lib.__security_check_cookie.restype = None
_lib.__report_gsfailure.argtypes = [ctypes.c_void_p]
_lib.__report_gsfailure.restype = None
_lib.process.argtypes = [ctypes.c_void_p]
_lib.process.restype = ctypes.c_int32
_lib.write_buffer.argtypes = [ctypes.c_void_p, ctypes.c_void_p]
_lib.write_buffer.restype = ctypes.c_int32
_lib.create_config.argtypes = [ctypes.c_void_p]
_lib.create_config.restype = ctypes.c_void_p
_lib.destroy_config.argtypes = [ctypes.c_void_p]
_lib.destroy_config.restype = None

def __va_start(param0):
    """Wrapper for native function '__va_start'."""
    ownership._tracker.mark_borrowed(param0)
    # Pre-conditions
    # Enforce: func___va_start_p_param0_non_null
    if param0 is None or not bool(param0):
        raise exceptions.NullPointerViolation(
            "func___va_start_p_param0_non_null",
            "Parameter 'param0' must not be NULL"
        )
    result = _lib.__va_start(param0)
    return result

def __security_init_cookie():
    """Wrapper for native function '__security_init_cookie'."""
    result = _lib.__security_init_cookie()
    return result

def __security_check_cookie(_StackCookie):
    """Wrapper for native function '__security_check_cookie'."""
    ownership._tracker.mark_borrowed(_StackCookie)
    result = _lib.__security_check_cookie(_StackCookie)
    return result

def __report_gsfailure(_StackCookie):
    """Wrapper for native function '__report_gsfailure'."""
    ownership._tracker.mark_borrowed(_StackCookie)
    result = _lib.__report_gsfailure(_StackCookie)
    return result

def process(cfg):
    """Wrapper for native function 'process'."""
    ownership._tracker.mark_borrowed(cfg)
    # Pre-conditions
    # Enforce: func_process_p_cfg_non_null
    if cfg is None or not bool(cfg):
        raise exceptions.NullPointerViolation(
            "func_process_p_cfg_non_null",
            "Parameter 'cfg' must not be NULL"
        )
    result = _lib.process(cfg)
    # Post-conditions
    # Enforce: func_process_ret_error_code
    # (Note: Result is checked by the caller or specialized checked function)
    return result

def write_buffer(buffer, size):
    """Wrapper for native function 'write_buffer'."""
    ownership._tracker.mark_borrowed(buffer)
    ownership._tracker.mark_borrowed(size)
    # Pre-conditions
    # Enforce: func_write_buffer_p_buffer_non_null
    if buffer is None or not bool(buffer):
        raise exceptions.NullPointerViolation(
            "func_write_buffer_p_buffer_non_null",
            "Parameter 'buffer' must not be NULL"
        )
    result = _lib.write_buffer(buffer, size)
    # Post-conditions
    # Enforce: func_write_buffer_ret_error_code
    # (Note: Result is checked by the caller or specialized checked function)
    return result

def create_config(mode):
    """Wrapper for native function 'create_config'."""
    ownership._tracker.mark_borrowed(mode)
    result = _lib.create_config(mode)
    return result

def destroy_config(cfg):
    """Wrapper for native function 'destroy_config'."""
    ownership._tracker.mark_transferred(cfg)
    # Pre-conditions
    # Enforce: func_destroy_config_p_cfg_non_null
    if cfg is None or not bool(cfg):
        raise exceptions.NullPointerViolation(
            "func_destroy_config_p_cfg_non_null",
            "Parameter 'cfg' must not be NULL"
        )
    result = _lib.destroy_config(cfg)
    return result
